[package]
name = "tums"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
tokio = "1.22.0"
futures = "0.3.25"
once_cell = "1.16.0"
similar = "2.2.0"
chrono = "0.4.23"
serde = { version = "1.0.148", features = ["derive"] }
mongodb = { version = "2.3.1", features = ["bson-chrono-0_4"] }
