[package]
name = "tums"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
tokio = "1.22.0"
futures = "0.3.25"
once_cell = "1.16.0"
similar = "2.2.0"
chrono = "0.4.23"
serde = { version = "1.0.149", features = ["derive"] }
mongodb = { version = "2.3.1", features = ["bson-chrono-0_4"] }
log = "0.4.17"
dotenv = "0.15.0"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
serde_json = "1.0.93"
env_logger = "0.10.0"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
url = "2.3.1"
